Hide android keyboard

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="footer">
             <form id="send-form" class="send-form">
                     <div class="autocomplete"></div>
-                    <input id="input" type="text" aria-label="Input" autocomplete="off" placeholder="Type manual Command...">
+                    <input id="input" type="text" aria-label="Input" autocomplete="off" placeholder="Type manual Command..." onfocus="blur();">
                     <button type="submit" aria-label="Send">
                         <i class="material-icons">send</i>
                     </button>
