--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
             </div>
 
             <div class=scrollable>
+                    <div class=header>
+                            <h3>Console</h3>
+                        </div>
                 <div id="terminal" class="terminal">    
                 </div>
                
